# model-forge-lib

./: README.md  pyproject.toml
src/modelforge/: auth.py  cli.py  config.py  registry.py
tests/: conftest.py  test_cli.py  test_config.py
