[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-forge-lib"
version = "0.0.1"
description = "A reusable library for managing LLM providers, authentication, and model selection."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "keyring",
    "requests",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "click",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
modelforge = "modelforge.cli:cli" 