[tool.poetry]
name = "modelforge"
version = "0.1.0"
description = "A reusable library for managing LLM providers, authentication, and model selection."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "modelforge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
keyring = "^25.2.1"
requests = "^2.32.3"
langchain-core = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.0"
langchain-google-genai = "^2.1.5"

[tool.poetry.scripts]
modelforge = "modelforge.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 